--- a/style.css
+++ b/style.css
@@ -186,5 +186,5 @@ footer img {
 .reveils-visible {
     opacity: 1;
     transform: translateY(0);
-    transition: 1s;
+    transition: 1s cubic-bezier(.5, 0,0, 1);
 }
