--- a/style.css
+++ b/style.css
@@ -308,7 +308,7 @@ footer a {
     }
 
     .phone .detaille3 h3 {
-        font-size: 16px; /* Réduire la taille du titre */
+        font-size: 16px; 
     }
 
     footer img {
