--- a/style.css
+++ b/style.css
@@ -304,7 +304,7 @@ footer a {
     }
 
     .phone img {
-        max-width: 320px; /* Réduire la taille de l'image */
+        max-width: 320px;
     }
 
     .phone .detaille3 h3 {
