--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ footer a {
     }
 
     .tips .detaille2 h3 {
-        font-size: 16px; /* Réduire la taille du titre */
+        font-size: 16px; 
     }
 
     .phone img {
