--- a/style.css
+++ b/style.css
@@ -296,7 +296,7 @@ footer a {
     }
 
     .tips img {
-        max-width: 320px; /* Réduire la taille de l'image */
+        max-width: 320px;
     }
 
     .tips .detaille2 h3 {
