--- a/style.css
+++ b/style.css
@@ -292,7 +292,7 @@ footer a {
     }
 
     .boitier .detaille1 h3 {
-        font-size: 16px; /* Réduire la taille du titre */
+        font-size: 16px; 
     }
 
     .tips img {
