--- a/style.css
+++ b/style.css
@@ -288,7 +288,7 @@ footer a {
     }
 
     .boitier img {
-        max-width: 320px; /* Réduire la taille de l'image */
+        max-width: 320px;
     }
 
     .boitier .detaille1 h3 {
