--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ footer a {
     }
 
     .miniheader .detaille h3 {
-        font-size: 16px; /* Réduire la taille du titre */
+        font-size: 16px;
     }
 
     .boitier img {
