--- a/style.css
+++ b/style.css
@@ -280,7 +280,7 @@ footer a {
     }
 
     .miniheader .detaille {
-        margin-left: 20px; /* Réduire l'espace entre l'image et le texte */
+        margin-left: 20px;
     }
 
     .miniheader .detaille h3 {
